--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@react-email/components": "^0.5.7",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.2",
     "mongoose": "^8.19.2",
     "moongoose": "^0.0.1",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
+    "nodemailer": "^7.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "resend": "^6.3.0",
