--- a/package.json
+++ b/package.json
@@ -9,18 +9,32 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
     "@react-email/components": "^0.5.7",
+    "ai": "^5.0.102",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "input-otp": "^1.4.2",
+    "lucide-react": "^0.555.0",
     "mongoose": "^8.19.2",
     "moongoose": "^0.0.1",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
     "nodemailer": "^7.0.10",
+    "openai": "^6.9.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hook-form": "^7.67.0",
     "resend": "^6.3.0",
-    "zod": "^4.1.12"
+    "tailwind-merge": "^3.4.0",
+    "usehooks-ts": "^3.1.1",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -28,9 +42,11 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
+    "baseline-browser-mapping": "^2.9.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
